external-projects/sui-prover/crates/sui-prover/tests/snapshots/ints.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/ints.fail.move:16:3
   │
16 │   ensures(res_int != x_int.add(1u64.to_int()));
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/ints.fail.move:11: foo_spec
